samples/_failures_safe/1761531137_ac82ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1a12fc7.c: In function ‘main’:
./samples/SAFE/__tmp_d1a12fc7.c:187:28: error: missing terminating " character
  187 |                     printf("Input too long
      |                            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d1a12fc7.c:187:21: error: expected expression at end of input
  187 |                     printf("Input too long
      |                     ^~~~~~
./samples/SAFE/__tmp_d1a12fc7.c:187:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1a12fc7.c:187:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1a12fc7.c:187:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1a12fc7.c:187:21: error: expected declaration or statement at end of input
